--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^0.0.0",
+    "react-window": "^1.8.8"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
@@ -26,6 +27,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
-  }
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10"
+  },
+  "proxy": "http://localhost:3001"
 }
